ctowasm/test/samples/error/fn_call_with_wrong_args.c
int f1(const char c);
int f2(char c);

int main() {
  
}